--- a/Pipfile
+++ b/Pipfile
@@ -10,8 +10,9 @@ matplotlib = "*"
 tk = "*"
 colorama = "*"
 tqdm = "*"
+psycopg2-binary = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.12"
+python_version = "3.10"
